Fixes #3377 - Improve jetty-ssl-context.xml.
Split `ssl.mod` and `jetty-ssl.xml` into `ssl-context.mod` and `jetty-ssl-context.xml`.

Added as properties all those that were missing to configure `SslContextFactory`.

Updated documentation.
Removed duplicate documentation section about custom configuration of TLS properties via a custom XML file.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>